tests/rosetta/out/C/camel-case-and-snake-case.error
cc: exit status 1
/tmp/camel-case-and-snake-case.c: In function ‘padLeft’:
/tmp/camel-case-and-snake-case.c:68:32: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   68 |     char *tmp4 = concat_string(res, " ");
      |                                ^~~
/tmp/camel-case-and-snake-case.c:21:34: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/camel-case-and-snake-case.c:72:30: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   72 |   char *tmp5 = concat_string(res, s);
      |                              ^~~
/tmp/camel-case-and-snake-case.c:21:34: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/camel-case-and-snake-case.c: In function ‘snakeToCamel’:
/tmp/camel-case-and-snake-case.c:77:5: warning: assignment discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   77 |   s = trimSpace(s);
      |     ^
/tmp/camel-case-and-snake-case.c:90:19: warning: implicit declaration of function ‘lower’ [-Wimplicit-function-declaration]
   90 |       out = out + lower(ch);
      |                   ^~~~~
/tmp/camel-case-and-snake-case.c:96:19: warning: implicit declaration of function ‘upper’; did you mean ‘isUpper’? [-Wimplicit-function-declaration]
   96 |       out = out + upper(ch);
      |                   ^~~~~
      |                   isUpper
/tmp/camel-case-and-snake-case.c:99:34: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   99 |       char *tmp7 = concat_string(out, ch);
      |                                  ^~~
/tmp/camel-case-and-snake-case.c:21:34: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/camel-case-and-snake-case.c:99:39: warning: passing argument 2 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   99 |       char *tmp7 = concat_string(out, ch);
      |                                       ^~
/tmp/camel-case-and-snake-case.c:21:43: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                                     ~~~~~~^
/tmp/camel-case-and-snake-case.c: In function ‘camelToSnake’:
/tmp/camel-case-and-snake-case.c:108:5: warning: assignment discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  108 |   s = trimSpace(s);
      |     ^
/tmp/camel-case-and-snake-case.c:117:36: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  117 |         char *tmp9 = concat_string(out, "_");
      |                                    ^~~
/tmp/camel-case-and-snake-case.c:21:34: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/camel-case-and-snake-case.c:126:37: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  126 |         char *tmp10 = concat_string(out, "_");
      |                                     ^~~
/tmp/camel-case-and-snake-case.c:21:34: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/camel-case-and-snake-case.c:133:17: warning: passing argument 1 of ‘isUpper’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  133 |     if (isUpper(ch)) {
      |                 ^~
/tmp/camel-case-and-snake-case.c:62:19: note: expected ‘char *’ but argument is of type ‘const char *’
   62 | int isUpper(char *ch) { return (strcmp(ch, "A") >= 0) && ch <= "Z"; }
      |             ~~~~~~^~
/tmp/camel-case-and-snake-case.c:135:37: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  135 |         char *tmp11 = concat_string(out, "_");
      |                                     ^~~
/tmp/camel-case-and-snake-case.c:21:34: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/camel-case-and-snake-case.c:147:30: warning: passing argument 1 of ‘slice_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  147 |   char *tmp12 = slice_string(out, start, start + 1);
      |                              ^~~
/tmp/camel-case-and-snake-case.c:30:33: note: expected ‘char *’ but argument is of type ‘const char *’
   30 | static char *slice_string(char *s, int start, int end) {
      |                           ~~~~~~^
/tmp/camel-case-and-snake-case.c:152:30: warning: passing argument 1 of ‘slice_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  152 |   char *tmp13 = slice_string(out, end - 1, end);
      |                              ^~~
/tmp/camel-case-and-snake-case.c:30:33: note: expected ‘char *’ but argument is of type ‘const char *’
   30 | static char *slice_string(char *s, int start, int end) {
      |                           ~~~~~~^
/tmp/camel-case-and-snake-case.c:156:30: warning: passing argument 1 of ‘slice_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  156 |   char *tmp14 = slice_string(out, start, end);
      |                              ^~~
/tmp/camel-case-and-snake-case.c:30:33: note: expected ‘char *’ but argument is of type ‘const char *’
   30 | static char *slice_string(char *s, int start, int end) {
      |                           ~~~~~~^
/tmp/camel-case-and-snake-case.c:162:32: warning: passing argument 1 of ‘slice_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  162 |     char *tmp15 = slice_string(out, j, j + 1);
      |                                ^~~
/tmp/camel-case-and-snake-case.c:30:33: note: expected ‘char *’ but argument is of type ‘const char *’
   30 | static char *slice_string(char *s, int start, int end) {
      |                           ~~~~~~^
/tmp/camel-case-and-snake-case.c:166:37: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  166 |         char *tmp16 = concat_string(res, c);
      |                                     ^~~
/tmp/camel-case-and-snake-case.c:21:34: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/camel-case-and-snake-case.c:166:42: warning: passing argument 2 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  166 |         char *tmp16 = concat_string(res, c);
      |                                          ^
/tmp/camel-case-and-snake-case.c:21:43: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                                     ~~~~~~^
/tmp/camel-case-and-snake-case.c:171:35: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  171 |       char *tmp17 = concat_string(res, c);
      |                                   ^~~
/tmp/camel-case-and-snake-case.c:21:34: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/camel-case-and-snake-case.c:171:40: warning: passing argument 2 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  171 |       char *tmp17 = concat_string(res, c);
      |                                        ^
/tmp/camel-case-and-snake-case.c:21:43: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                                     ~~~~~~^
/tmp/camel-case-and-snake-case.c: In function ‘main’:
/tmp/camel-case-and-snake-case.c:194:7: error: conflicting types for ‘samples’; have ‘int’
  194 |   int samples = samples;
      |       ^~~~~~~
/tmp/camel-case-and-snake-case.c:181:15: note: previous definition of ‘samples’ with type ‘list_string’
  181 |   list_string samples = list_string_create(12);
      |               ^~~~~~~
/tmp/camel-case-and-snake-case.c:198:35: error: invalid operands to binary + (have ‘const char *’ and ‘char *’)
  198 |     printf("%s\n", padLeft(s, 34) + " => " + camelToSnake(s));
      |                    ~~~~~~~~~~~~~~ ^
      |                    |              |
      |                    const char *   char *
/tmp/camel-case-and-snake-case.c:204:35: error: invalid operands to binary + (have ‘const char *’ and ‘char *’)
  204 |     printf("%s\n", padLeft(s, 34) + " => " + snakeToCamel(s));
      |                    ~~~~~~~~~~~~~~ ^
      |                    |              |
      |                    const char *   char *
/tmp/camel-case-and-snake-case.c: At top level:
/tmp/camel-case-and-snake-case.c:208:5: error: redefinition of ‘main’
  208 | int main() {
      |     ^~~~
/tmp/camel-case-and-snake-case.c:180:5: note: previous definition of ‘main’ with type ‘int()’
  180 | int main() {
      |     ^~~~
