tests/rosetta/out/C/camel-case-and-snake-case.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:18:05Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:18:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
char *trimSpace(char *s) {
  int start = 0;
  char *tmp1 = slice_string(s, start, start + 1);
  while (start < strlen(s) && tmp1 == " ") {
    start = start + 1;
  }
  int end = strlen(s);
  char *tmp2 = slice_string(s, end - 1, end);
  while (end > start && tmp2 == " ") {
    end = end - 1;
  }
  char *tmp3 = slice_string(s, start, end);
  return tmp3;
}

int isUpper(char *ch) { return (strcmp(ch, "A") >= 0) && ch <= "Z"; }

char *padLeft(char *s, int w) {
  char *res = "";
  int n = w - strlen(s);
  while (n > 0) {
    char *tmp4 = concat_string(res, " ");
    res = tmp4;
    n = n - 1;
  }
  char *tmp5 = concat_string(res, s);
  return tmp5;
}

char *snakeToCamel(char *s) {
  s = trimSpace(s);
  char *out = "";
  int up = 0;
  int i = 0;
  while (i < strlen(s)) {
    char *tmp6 = slice_string(s, i, i + 1);
    char *ch = tmp6;
    if ((strcmp(ch, "_") == 0) || ch == "-" || ch == " " || ch == ".") {
      up = 1;
      i = i + 1;
      continue;
    }
    if (i == 0) {
      out = out + lower(ch);
      up = 0;
      i = i + 1;
      continue;
    }
    if (up) {
      out = out + upper(ch);
      up = 0;
    } else {
      char *tmp7 = concat_string(out, ch);
      out = tmp7;
    }
    i = i + 1;
  }
  return out;
}

char *camelToSnake(char *s) {
  s = trimSpace(s);
  char *out = "";
  int prevUnd = 0;
  int i = 0;
  while (i < strlen(s)) {
    char *tmp8 = slice_string(s, i, i + 1);
    char *ch = tmp8;
    if ((strcmp(ch, " ") == 0) || ch == "-" || ch == ".") {
      if ((!prevUnd) && strlen(out) > 0) {
        char *tmp9 = concat_string(out, "_");
        out = tmp9;
        prevUnd = 1;
      }
      i = i + 1;
      continue;
    }
    if ((strcmp(ch, "_") == 0)) {
      if ((!prevUnd) && strlen(out) > 0) {
        char *tmp10 = concat_string(out, "_");
        out = tmp10;
        prevUnd = 1;
      }
      i = i + 1;
      continue;
    }
    if (isUpper(ch)) {
      if (i > 0 && ((!prevUnd))) {
        char *tmp11 = concat_string(out, "_");
        out = tmp11;
      }
      out = out + lower(ch);
      prevUnd = 0;
    } else {
      out = out + lower(ch);
      prevUnd = 0;
    }
    i = i + 1;
  }
  int start = 0;
  char *tmp12 = slice_string(out, start, start + 1);
  while (start < strlen(out) && tmp12 == "_") {
    start = start + 1;
  }
  int end = strlen(out);
  char *tmp13 = slice_string(out, end - 1, end);
  while (end > start && tmp13 == "_") {
    end = end - 1;
  }
  char *tmp14 = slice_string(out, start, end);
  out = tmp14;
  char *res = "";
  int j = 0;
  int lastUnd = 0;
  while (j < strlen(out)) {
    char *tmp15 = slice_string(out, j, j + 1);
    char *c = tmp15;
    if ((strcmp(c, "_") == 0)) {
      if ((!lastUnd)) {
        char *tmp16 = concat_string(res, c);
        res = tmp16;
      }
      lastUnd = 1;
    } else {
      char *tmp17 = concat_string(res, c);
      res = tmp17;
      lastUnd = 0;
    }
    j = j + 1;
  }
  return res;
}

int mochi_main() {
  list_string samples = list_string_create(12);
  samples.data[0] = "snakeCase";
  samples.data[1] = "snake_case";
  samples.data[2] = "snake-case";
  samples.data[3] = "snake case";
  samples.data[4] = "snake CASE";
  samples.data[5] = "snake.case";
  samples.data[6] = "variable_10_case";
  samples.data[7] = "variable10Case";
  samples.data[8] = "ɛrgo rE tHis";
  samples.data[9] = "hurry-up-joe!";
  samples.data[10] = "c://my-docs/happy_Flag-Day/12.doc";
  samples.data[11] = " spaces ";
  printf("=== To snake_case ===\n");
  for (int tmp18 = 0; tmp18 < 12; tmp18++) {
    int s = samples.data[tmp18];
    printf("%d\n", padLeft(s, 34) + " => " + camelToSnake(s));
  }
  printf("\n");
  printf("=== To camelCase ===\n");
  for (int tmp19 = 0; tmp19 < 12; tmp19++) {
    int s = samples.data[tmp19];
    printf("%d\n", padLeft(s, 34) + " => " + snakeToCamel(s));
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
